Changed z-index of .btn-feedback to prevent it being covered by external link button.

--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -10,7 +10,7 @@
   position: fixed;
   bottom: 1rem;
   right: 1rem;
-  z-index: 2;
+  z-index: 3;
 }
 
 a.link-danger {
